[gd_scene load_steps=3 format=2]

[ext_resource path="res://Editor Note.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[node name="Editor Note" type="Node2D"]
script = ExtResource( 1 )

[node name="Note Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Note Area"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 1, 1, 0.5 )
polygon = PoolVector2Array( 80, -80, 80, 80, -80, 80, -80, -80 )

[connection signal="input_event" from="Note Area" to="." method="_on_Note_Area_input_event"]
[connection signal="mouse_entered" from="Note Area" to="." method="_on_Note_Area_mouse_entered"]
[connection signal="mouse_exited" from="Note Area" to="." method="_on_Note_Area_mouse_exited"]
